   - KDE bug #301546: Wrong traffic reported on FreeBSD
   - KDE bug #301577: Broken link state awareness on FreeBSD
   - KDE bug #301697: Wrong encryption state for mixed WEP connections on
     FreeBSD
   - KDE bug #301699: Default gateway undetected on FreeBSD
 * Add monochrome icon theme contributed by Vinícius Sabino.
 * Port to libnl3
 * Remove support for the legacy system tray icon

Version 0.7.3
 * By request, add a configure switch to disable wireless support.

Version 0.7.2
 * fix loading/calculating off-peak traffic
 * use bugs.kde.org for bug reports
 * keep the pixmap cache size under control

Version 0.7.1
 * bugfixes:
   - fix a warning about K_EXPORT_COMPONENT_FACTORY
   - fix how the poll interval gets validated

Version 0.7.0
 * statistics changes:
   - statistics are now stored in an SQLite 3 database
   - custom billing periods are based on rules; this includes more flexible
     period lengths and the ability to track peak/off-peak hours
   - support for an arbitrary number of traffic notifications
 * ui changes:
   - the statistics dialog entries have tooltips; select multiple entries to
     get their sum
 * bugfixes:
   - reset traffic counters when an interface becomes unavailable
   - mark pointopoint interfaces as connected only if they have an ip address
   - fix build on FreeBSD and GNU/kFreeBSD
   - netload icon theme shouldn't use the unavailable color as its background

Version 0.6.3
 * save changes to traffic threshold setting
 * add option to report traffic rate in bit/s
 * update the signal plotter from KDE SC 4.4 branch; a few minor plotter
   config options were dropped as a result
 * on startup sync recent traffic statistics with vnstat if it's available;
   this should help KNemo account for traffic between sessions
 * fix possible hang when text icon theme uses fixed fonts

Version 0.6.2
 * add rolling 24 hour statistics
 * make traffic notification more flexible to accommodate some common limits
   (hourly, daily, etc...)